WP-8550 fixing the menu spacing to 35px and the line alignment and the bump over on the hover menus.

--- a/sass/partials/design/_md-megamenu-main.sass
+++ b/sass/partials/design/_md-megamenu-main.sass
@@ -188,10 +188,10 @@
 #md-megamenu-1
   font-family: $font-demi
   font-size: 20px
-  padding: 35px 0 12px 180px
+  padding: 35px 0 35px 180px
   .awemenu-submenu
     background-color: transparent
-    padding-top: 10px
+    padding-top: 20px
 
   .awemenu-active
     a
@@ -236,7 +236,7 @@
     // the top menu bar
     li
       .awemenu-item-title
-        padding-bottom: 20px
+        padding-bottom: 30px
         +breakpoint($bp-for-phone-only)
           font-face: $font-sans
           font-size: 16px
@@ -246,7 +246,7 @@
       border-top: 1px solid $red
       background-color: $white
       // styles to get the full white width on a browser
-      left: 50%
+      left: 46%
       right: 50%
       margin-left: -50vw
       margin-right: -50vw
